# middleware

./: sdkconfig.old
_mw_main/: CMakeLists.txt  Kconfig.projbuild
ble/: Kconfig  Mconfig  __blecent.h  misc.h  peer.c  scan.c  scan.h  zhaga_gatt_client.c
coder/: CMakeLists.txt  coder_defs.h  coder_json.c  coder_json.h  utils.c  utils.h
coder/test/: test_flag_coder.c
components/ble/: CMakeLists.txt  ble_luna_defs.h  misc.c  peer.h  scan.c  zhaga_central.c  zhaga_central.h  zhaga_gatt_client.h
components/coder/: flag_coder.c  flag_coder.h
components/components_main/: Kconfig.projbuild
components/drvGpio/: .cproject  .project  CMakeLists.txt  Mconfig  drvGpio.c  drvGpio.h
components/drvUart/: .cproject  CMakeLists.txt  Mconfig  drvUart.c  drvUart.h
components/firmware/: CMakeLists.txt  firmware.h
components/functions/: CMakeLists.txt
components/functions/functionBle/: dcdBle.c  fnBle.c  functionBle.h
components/functions/functionEsp/: dcdEsp.c  fnEsp.c
components/http/: bt.html  cacert.pem  dali.html  footer_wifi.html  handlers_bt.c  handlers_dali.c  handlers_update.c  utils.html  ws.c
components/mediator/: Mconfig  mediator.c
components/mqtt_zhaga/: CMakeLists.txt  Mconfig  mqtt_zhaga.h
components/nv_memory/: nv_memory.h
components/ota/: esp_ota.h
components/ringbuf/: ringbuf.c  ringbuf.h  test_ringbuf.c
components/storage/: CMakeLists.txt  fs_fat_spi.c
components/tcp_server/: .project  Mconfig  tcp_server.c  tcp_server.h
components/wifi/: .project  (+5 more)
firmware/: firmware.c
functions/: CMakeLists.txt
functions/functionEsp/: dcdEsp.h  fnEsp.c  fnEsp.h
functions/functionFuota/: dcdFuota.c  dcdFuota.h  fnFuota.c
http/: CMakeLists.txt  footer_bt.html  handlers_files.c  handlers_wifi.c  header.html  http.c  http.h  http_utils.c  redirect.js  sta.html  upload.html  upload_script.html  ws.h  ws.html
mediator/: CMakeLists.txt  mediator.c  mediator.h
mqtt_zhaga/: Kconfig  mqtt_zhaga.c
nv_memory/: CMakeLists.txt  Kconfig  Mconfig  nv_memory.c
ota/: CMakeLists.txt  esp_ota.c  luna_ota.c  luna_ota.h
ringbuf/: CMakeLists.txt
storage/: Kconfig  Mconfig  fs_fat_spi.h
tcp_server/: .cproject  CMakeLists.txt  Kconfig  tcp_server.c
transport/: CMakeLists.txt  transport_defs.h  transport_tcp.h  transport_uart.c  transport_uart.h  transport_ws.c  zhagaesp.code-workspace
wifi/: .cproject  Kconfig  Mconfig  wifi.h  wifi_config.c
(+8 files in other folders)
