idf_component_register(SRCS     "handlers_update.c" 
                                "handlers_files.c" 
                                "handlers_bt.c" 
                                "handlers_wifi.c" 
                                "http.c" 
                                "http_utils.c"
                                "handlers_dali.c"
                                "ws.c"
                    INCLUDE_DIRS "."
                    REQUIRES    "fatfs" 
                                "spiffs" 
                                "esp_https_server" 
                                "esp_http_server" 
                                "wifi" 
                                "app_update" 
                                "esp-tls" 
                                "functions" 
                                "ota"
                                
                    EMBED_FILES "upload_script.html" 
                                "jooby_yellow_fav.png" 
                                "sta.html" 
                                "header.html" 
                                "footer_wifi.html" 
                                "upload.html" 
                                "footer_bt.html"
                                "dali.html"
                                "ws.html"
                                "redirect.js"
                                "bt.html"
                                "utils.html"
#                    EMBED_TXTFILES "cacert.pem" "prvtkey.pem"
                )
